--- a/cluster/k8s-1.13.0-sriov/manifests/sriov-crd.yaml
+++ b/cluster/k8s-1.13.0-sriov/manifests/sriov-crd.yaml
@@ -6,7 +6,7 @@ metadata:
     k8s.v1.cni.cncf.io/resourceName: intel.com/sriov
 spec:
   config: '{
-  "type": "noop",
+  "type": "sriov",
   "name": "sriov-network",
   "ipam": {
     "type": "host-local",
